# bachelorthesis

./: Cargo.toml  print-hugetlbfs.sh  reset-hugetlbfs.sh  setup-hugetlbfs.sh
benches/: benchmark.rs  benchmark_sequential.rs  distributions.rs  external_merge.rs  external_sort.rs  manual.rs  parallel.rs  parallel_factor.rs  rolling_sort.rs  sequential.rs  sort_merge.rs
examples/: clear.rs  example_preparation.rs  example_rolling_sort.rs  example_sort_merge.rs  read.rs  sort_merge.rs  sort_merge_parallel.rs  test_performance.rs
src/: base_case.rs  classification.rs  cleanup.rs  config.rs  conversion.rs  lib.rs  main.rs  merge.rs  parallel.rs  parallel_sort_merge.rs  permutation.rs  rolling_sort.rs  sampling.rs  sequential.rs  sequential_sort_merge.rs  setup.rs  sort.rs  sort_merge.rs  sorter.rs  tmp.rs
tests/: test_merge.rs  test_sort.rs
vroom/: .gitignore  Cargo.toml  README.md
vroom/examples/: hello_world.rs  io_test.rs  tmp.rs
vroom/src/: lib.rs  memory.rs  nvme.rs  queues.rs
