[package]
name = "bachelorthesis"
version = "0.1.0"
edition = "2021"

[lib]
name = "bachelorthesis"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
log = "0.4.22"
env_logger = "0.11.3"
crossbeam-channel = "0.5.13"
rayon = "1.10.0"
thread_local = "1.1.8"
vroom = {path = "./vroom"}
lazy_static = "1.5.0"
once_cell = "1.19.0"
perf-event2 = "0.7"
rand_distr = "0.4"
#tracing-perfetto = "0.1.1"
#tracing-subscriber = "0.3.18"
#tracing = "0.1.40"


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "distributions"
harness = false

[[bench]]
name = "parallel"
harness = false

[[bench]]
name = "parallel_factor"
harness = false

[[bench]]
name = "sort_merge"
harness = false

[[bench]]
name = "rolling_sort"
harness = false

[[bench]]
name = "external_sort"
harness = false



[profile.release]
debug = true

[profile.bench]
opt-level = 3
debug = false
lto = true  # Enable link-time optimization
panic = "abort"  # This can improve performance if panics are not expected
